# compute-rust-auth

./: .gitignore  Cargo.toml  LICENSE  README.md  SECURITY.MD  example-config.json  fastly.toml  rust-toolchain  setup.sh
.cargo/: audit.toml
.github/: CODEOWNERS
.github/workflows/: test.yml
src/: config.rs  config.toml  cookies.rs  idp.rs  jwt.rs  main.rs  pkce.rs  responses.rs
src/.well-known/: jwks.json  openid-configuration.json
src/well-known/: jwks.json  openid-configuration.json
