[package]
name = "compute-rust-auth"
version = "0.3.0"
authors = []
edition = "2018"

[profile.release]
debug = true

[dependencies]
fastly = "0.9.8"
hmac-sha256 = "1.1.7"
rand = "0.8.5"
serde = { version = "1.0.189", features = ["derive"] }
serde_json = "1.0.109"
base64 = "0.22.1"
toml = "0.5.9"
jwt-simple = "0.11.7"
