[package]
name = "compute-rust-auth"
version = "0.4.0"
authors = []
edition = "2018"

[profile.release]
debug = true

[dependencies]
fastly = "0.10.1"
hmac-sha256 = "1.1.7"
rand = "0.8.5"
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.120"
base64 = "0.22.1"
jwt-simple = "0.12.9"
