[package]
name = "compute-rust-auth"
version = "0.4.0"
authors = []
edition = "2021"
# Remove this line if you want to be able to publish this crate on crates.io.
# Otherwise, `publish = false` prevents an accidental `cargo publish` from revealing private source.
publish = false

[profile.release]
debug = 1
codegen-units = 1
lto = "fat"

[dependencies]
fastly = "0.11.2"
hmac-sha256 = "1.1.7"
rand = "0.9.0"
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.120"
base64 = "0.22.1"
jwt-simple = "0.12.9"
